<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="15dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="2"
            android:text="@string/request_a_chauffeur"
            android:textColor="#444"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgPayment"
            android:layout_margin="5dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/ico1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cash"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_margin="5dp"
                android:text="@string/payment"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            >
        <ImageView
            android:layout_margin="5dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@mipmap/estimate" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/txtEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="KShs ---"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimate"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:textSize="12sp" />
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:gravity="center"
android:weightSum="3">

<com.rengwuxian.materialedittext.MaterialEditText
    android:id="@+id/source"
    android:layout_width="250dp"
    android:textSize="20sp"
    android:inputType="text"
    android:layout_height="wrap_content"
    android:hint="@string/pick_up"
    app:met_floatingLabel="highlight"
    app:met_singleLineEllipsis="true"
    android:drawableStart="@drawable/pickup"
    android:drawablePadding="10dp"
    />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:weightSum="3">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/destination"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/dropoff"
            android:hint="@string/destination"
            android:inputType="text"
            android:textSize="20sp"
            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true" />
    </LinearLayout>

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="PROCEED REQUEST"
        android:textColor="#fff" />

</LinearLayout>