<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registerRootLayout"
    tools:context="ke.co.struct.chauffeurrider.register_and_login.RiderRegisterActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/mTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/chauffeur"
                android:textSize="40sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/email"
                android:layout_alignStart="@+id/email"
                android:layout_below="@+id/name"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTitle"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintHorizontal_bias="0.0" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/mTitle"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                app:layout_constraintLeft_toLeftOf="@+id/surname"
                app:layout_constraintRight_toRightOf="@+id/surname"
                app:layout_constraintTop_toBottomOf="@+id/surname"
                app:layout_constraintHorizontal_bias="0.0" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/email"
                android:background="@drawable/edit_text"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintLeft_toLeftOf="@+id/name"
                app:layout_constraintRight_toRightOf="@+id/name"
                app:layout_constraintHorizontal_bias="0.0" />
            <LinearLayout
                android:background="@drawable/edit_text"
                android:id="@+id/phone_layout"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="45dp"
                android:layout_above="@+id/password"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintLeft_toLeftOf="@+id/email"
                app:layout_constraintRight_toRightOf="@+id/email"
                app:layout_constraintHorizontal_bias="0.0" >
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    app:ccp_textGravity="CENTER"
                    app:ccp_textSize="14sp"
                    app:ccp_rememberLastSelection="true"
                    app:ccpDialog_showPhoneCode="true"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_countryAutoDetectionPref="SIM_ONLY"
                    app:ccp_autoDetectLanguage="true"
                    app:ccp_defaultNameCode="KE"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_customMasterCountries="KE,CD"
                    />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/phone"
                android:background="@drawable/phone_edit_text"
                android:padding="10dp"
                android:inputType="phone"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/register"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:background="@drawable/edit_text"
                android:padding="10dp"
                android:inputType="textPassword"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/phone_layout"
                app:layout_constraintLeft_toLeftOf="@+id/phone_layout"
                app:layout_constraintRight_toRightOf="@+id/phone_layout"
                app:layout_constraintHorizontal_bias="0.0" />


            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/password"
                app:layout_constraintRight_toRightOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/emailError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone"
                android:layout_marginLeft="8dp"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/email"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="@+id/email" />

            <TextView
                android:id="@+id/passwordError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red"
                android:visibility="gone"
                android:layout_marginLeft="8dp"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/password"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@+id/phone_layout"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="@+id/password" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
